tdf#84522 fix reversed text of column break mark in a RTL page.

Set RTL falg for the font when the frame is right-to-left.

Change-Id: I834620ed44b01b9577ca6c7c42191f2400dd8219